add BBBC032-35 to image sets list and updates (resolves #8)

--- a/templates/BBBC032.html
+++ b/templates/BBBC032.html
@@ -35,7 +35,7 @@
     <p>Images acquired by using PerkinElmer Ultraview VoX spinning disk microscope combined with a Leica SP8 with a 63x immersion objective (Distance between Z-slices = 0.5 um)
         <ul>
         <li>647 channel (BMP4blastocystC0): BMP4 transcripts</li>
-        <li>568 channel (BMP4blastocystC1): GAPD transcripts</li>
+        <li>568 channel (BMP4blastocystC1): GAPDH transcripts</li>
         <li>488 channel (BMP4blastocystC2): WGA</li>
         <li>405 channel (BMP4blastocystC3): Hoechst</li>
 
