--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -39,14 +39,14 @@
 	<tr>
 	  <td><a href="BBBC004/">BBBC004</a></td>
 	  <td>{{image_sets.BBBC004}}</td>
-	  <td>“Fluorescent”</td>
+	  <td>Fluorescent</td>
 	  <td class="count">100</td>
 	  <td>{{C}} {{FB}}</td>
 	</tr>
 	<tr>
 	  <td><a href="BBBC005/">BBBC005</a></td>
 	  <td>{{image_sets.BBBC005}}</td>
-	  <td>“Fluorescent”</td>
+	  <td>Fluorescent</td>
 	  <td class="count">19,200</td>
 	  <td>{{C}} {{FB}}</td>
 	</tr>
@@ -155,6 +155,34 @@
     <td>DIC</td>
     <td class="count">60</td>
     <td>{{H}}</td>
+  </tr>
+  <tr>
+    <td><a href="BBBC032">BBBC032</a></td>
+    <td>{{image_sets.BBBC032}}</td>
+    <td>Fluorescent</td>
+    <td class="count">1</td>
+    <td>{{FB}}</td>
+  </tr>
+  <tr>
+    <td><a href="BBBC033">BBBC033</a></td>
+    <td>{{image_sets.BBBC033}}</td>
+    <td>Fluorescent</td>
+    <td class="count">1</td>
+    <td>{{FB}}</td>
+  </tr>
+  <tr>
+    <td><a href="BBBC034">BBBC034</a></td>
+    <td>{{image_sets.BBBC034}}</td>
+    <td>Bright field and fluorescent</td>
+    <td class="count">2</td>
+    <td>{{FB}}</td>
+  </tr>
+  <tr>
+    <td><a href="BBBC035">BBBC035</a></td>
+    <td>{{image_sets.BBBC035}}</td>
+    <td>Fluorescent</td>
+    <td class="count">2</td>
+    <td>{{FB}}</td>
   </tr>
 
       </tbody>
