Add Data Science Bowl datasets (resolves #11)

--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -184,6 +184,13 @@
     <td class="count">2</td>
     <td>{{FB}}</td>
   </tr>
+  <tr>
+    <td><a href="BBBC038">BBBC038</a></td>
+    <td>{{image_sets.BBBC038}}</td>
+    <td>Fluorescent</td>
+    <td class="count">735</td>
+    <td>{{FB}}</td>
+  </tr>
 
       </tbody>
 
