--- a/templates/BBBC038.html
+++ b/templates/BBBC038.html
@@ -54,7 +54,7 @@
     <h3>Published results using this image set</h3>
     <p>These datasets will be evaluated in a publication to be submitted. </p>
     <h3>Recommended citation</h3>
-<p>&quot;We used image set <a href="">{{acc}}v1</a> Ulman et al. 2018, available from the Broad Bioimage Benchmark Collection
+<p>&quot;We used image set <a href="">{{acc}}v1</a>, available from the Broad Bioimage Benchmark Collection
   [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
     <h3>Copyright</h3>
