change AICS copyright info (resolves #14)

--- a/templates/BBBC034.html
+++ b/templates/BBBC034.html
@@ -73,7 +73,7 @@
   [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
     <h3>Copyright</h3>
-    <p>These images are under copyright by the Allen Institute for Cell Science. Copyright Contact: <a href="mailto:lemueln@alleninstitute.org">Lemuel Navarro</a> .</p>
+    <p>These images are under copyright by the Allen Institute for Cell Science. Contact <a href="mailto:terms@alleninstitute.org">terms@alleninstitute.org</a> for more information about the copyright.</p>
 
 
 {% endblock %}
