Added u prefix to utf strings, ran dos2unix, made footer timestamp part of template rather than base for image sets

--- a/templates/BBBC006.html
+++ b/templates/BBBC006.html
@@ -158,4 +158,8 @@
 	United States</span>.
 	</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 {% endblock %}
