--- a/templates/BBBC011.html
+++ b/templates/BBBC011.html
@@ -80,4 +80,9 @@
     <p>&quot;We used image set <a href="">{{acc}}v1</a> provided by Gary
     Ruvkun, available from the Broad Bioimage Benchmark Collection
     [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
-    {% endblock %}
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+{% endblock %}
