--- a/templates/BBBC021.html
+++ b/templates/BBBC021.html
@@ -323,4 +323,8 @@ compound or any compound on the same batch. Evaluations were performed at level 
 
 <p>The images and ground truth are copyright AstraZeneca Pharmaceuticals.</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 {% endblock %}
