--- a/templates/BBBC025.html
+++ b/templates/BBBC025.html
@@ -215,5 +215,9 @@ This work is published from:
   United States</span>.
 </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 
 {% endblock %}
