--- a/templates/BBBC035.html
+++ b/templates/BBBC035.html
@@ -58,5 +58,9 @@
     <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
     by <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName"><a href="mailto:codesolorzano@unav.es">Carlos Ortiz de Solórzano</a></span>. </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-03-06</p>
+  </footer>
+
 
 {% endblock %}
