--- a/templates/BBBC038.html
+++ b/templates/BBBC038.html
@@ -60,5 +60,9 @@
     <h3>Copyright</h3>
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> Copyright: CC0. To the extent possible under law, the various contributors of the imagesets have waived all copyright and related or neighboring rights to <span property="dct:title">{{acc}}v1</span>.</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-05-03</p>
+  </footer>
+
 
 {% endblock %}
