--- a/templates/BBBC003.html
+++ b/templates/BBBC003.html
@@ -113,4 +113,9 @@
           <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/StillImage" property="dct:title" rel="dct:type">
             The Synthetic 1 images
           </span> are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License</a> by <a href="mailto:pekka.ruusuvuori@tut.fi">Pekka Ruusuvuori</a>.
+ 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 {% endblock %}
