--- a/templates/BBBC005.html
+++ b/templates/BBBC005.html
@@ -125,4 +125,9 @@ examples of usage. There are 1200 image files.</p>
 	<span datatype="dct:ISO3166" content="US" about="http://www.broadinstitute.org/~anne/" property="vcard:Country">
 	United States</span>.
 	</p>
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 {% endblock %}
