--- a/templates/BBBC007.html
+++ b/templates/BBBC007.html
@@ -117,4 +117,8 @@ This work is published from:
   United States</span>.
 </p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 {% endblock %}
