--- a/templates/BBBC009.html
+++ b/templates/BBBC009.html
@@ -94,4 +94,10 @@ This work is published from:
       content="US" about="http://www.broadinstitute.org/~anne/">
   United States</span>.
 </p>
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 {% endblock %}
