--- a/templates/BBBC012.html
+++ b/templates/BBBC012.html
@@ -77,4 +77,9 @@
     Irazoqui, available from the Broad Bioimage Benchmark Collection
 [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 {% endblock %}
