--- a/templates/BBBC013.html
+++ b/templates/BBBC013.html
@@ -138,4 +138,10 @@
     <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>
     by
     <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Ilya Ravkin</span>.
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 {% endblock %}
