--- a/templates/BBBC015.html
+++ b/templates/BBBC015.html
@@ -97,4 +97,9 @@
     by
     <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Ilya Ravkin</span>.
 
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
+
 {% endblock %}
