--- a/templates/BBBC020.html
+++ b/templates/BBBC020.html
@@ -91,4 +91,9 @@ $(document).ready(function () {
   $('.carousel').carousel();
 });
 </script>
+
+  <footer class="footer">
+        <p>This page last updated 2018-01-31</p>
+  </footer>
+
 {% endblock %}
