add Juan's dataset as BBBC039 (resolves #32)

--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -205,6 +205,13 @@
     <td class="count">735</td>
     <td>{{FB}}</td>
   </tr>
+  <tr>
+    <td><a href="BBBC039">BBBC039</a></td>
+    <td>{{image_sets.BBBC039}}</td>
+    <td>Fluorescent</td>
+    <td class="count">1</td>
+    <td>{{FB}}{{B}}{{H}}{{C}}</td>
+  </tr>
 
       </tbody>
 
