fix typo, add resolution, correct BBBC036 and BBBC037 classification (resolves #30 #31)

--- a/templates/BBBC022.html
+++ b/templates/BBBC022.html
@@ -31,9 +31,9 @@
                 </div>
               </div>
               <div class="item">
-		<img src="Cy5.png" alt="MitoTracker Deep Red statining" width="423" height="327">
+		<img src="Cy5.png" alt="MitoTracker Deep Red staining" width="423" height="327">
                 <div class="carousel-caption">
-                  <h4>MitoTracker Deep Red statining</h4>
+                  <h4>MitoTracker Deep Red staining</h4>
                 </div>
               </div>
             </div>
@@ -60,7 +60,7 @@
   fields of view. Each field was imaged in five channels (detection
   wavelengths), and each channel is stored as a separate, grayscale
   image file, so there are 345,600 image files in 16-bit TIFF
-  format.</p>
+  format. The images were taken at 20X magnification (0.656 μm/pixel).</p>
 
 <p>The images are provided in 100 zip archive files, one for each
   combination of plate and channel. There is
