--- a/templates/BBBC025.html
+++ b/templates/BBBC025.html
@@ -31,9 +31,9 @@
                 </div>
               </div>
               <div class="item">
-		<img src="Cy5.png" alt="MitoTracker Deep Red statining" width="423" height="327">
+		<img src="Cy5.png" alt="MitoTracker Deep Red staining" width="423" height="327">
                 <div class="carousel-caption">
-                  <h4>MitoTracker Deep Red statining</h4>
+                  <h4>MitoTracker Deep Red staining</h4>
                 </div>
               </div>
             </div>
