update BBBC039 (resolves #40 #41)

--- a/templates/BBBC039.html
+++ b/templates/BBBC039.html
@@ -33,6 +33,7 @@
 
     <h3>Images</h3>
     <p>This data set has a total of 200 fields of view of nuclei captured with fluorescence microscopy using the Hoechst stain. These images are a sample of the larger BBBC022 chemical screen. The images are stored as TIFF files with 520x696 pixels at 16 bits.</p>
+    <p><a href="https://github.com/carpenterlab/unet4nuclei">Github repo</a></p>
     <p><a href="images.zip"><i class="icon-download-alt"></i> images.zip (77.9 MB)</a></p>
 
     <h3>Ground truth {{O}}</h3>
