add dataset to image sets page

--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -198,6 +198,14 @@
     <td class="count">200</td>
     <td>{{FB}}{{B}}{{H}}{{C}}</td>
   </tr>
+  <tr>
+    <td><a href="BBBC041">BBBC041</a></td>
+    <td>{{image_sets.BBBC041}}</td>
+    <td>Bright field</td>
+    <td class="count">1364</td>
+    <td>{{C}}{{U}}</td>
+  </tr>
+
 
       </tbody>
 
@@ -283,6 +291,13 @@
       <td>Fluorescent</td>
       <td class="count">9</td>
       <td>{{B}}</td>
+    </tr>
+    <tr>
+      <td><a href="BBBC041">BBBC041</a></td>
+      <td>{{image_sets.BBBC041}}</td>
+      <td>Bright field</td>
+      <td class="count">1364</td>
+      <td>{{C}}{{U}}</td>
     </tr>
       </tbody>
 
