add BBBC042 dataset (resolves #5)

--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -205,7 +205,13 @@
     <td class="count">1364</td>
     <td>{{C}}{{U}}</td>
   </tr>
-
+  <tr>
+    <td><a href="BBBC042">BBBC042</a></td>
+    <td>{{image_sets.BBBC042}}</td>
+    <td>Bright field</td>
+    <td class="count">1200</td>
+    <td>{{B}}</td>
+  </tr>
 
       </tbody>
 
