fix missing example images

--- a/templates/BBBC042.html
+++ b/templates/BBBC042.html
@@ -8,22 +8,22 @@
 <ul class="thumbnails">
   <li>
     <div class="thumbnail">
-      <img src="BBBC042_example1.tif" width="" height="250" alt="example image"/>
+      <img src="BBBC042_example1.png" width="" height="250" alt="example image"/>
     </div>
   </li>
   <li>
     <div class="thumbnail">
-      <img src="BBBC042exampleimage2.png" width="" height="250" alt="example image"/>
+      <img src="BBBC042_example2.png" width="" height="250" alt="example image"/>
     </div>
   </li>
   <li>
     <div class="thumbnail">
-      <img src="BBBC042exampleimage3.png" width="" height="250" alt="example image"/>
+      <img src="BBBC042_example3.png" width="" height="250" alt="example image"/>
     </div>
   </li>
   <li>
     <div class="thumbnail">
-      <img src="BBBC042exampleimage4.png" width="" height="250" alt="example image"/>
+      <img src="BBBC042_example4.png" width="" height="250" alt="example image"/>
     </div>
   </li>
 </ul>
