--- a/templates/BBBC038.html
+++ b/templates/BBBC038.html
@@ -34,21 +34,31 @@
 </ul>
 
     <h3>Description of the biological application</h3>
-    <p>This image data set was created for the Kaggle 2018 Data Science Bowl sponsored by Booz Allen Hamilton with cash prizes. This image set was a testing ground for the application of novel and cutting edge approaches in computer vision and machine learning to the segmentation of the nuclei belonging to cells from a breadth of biological contexts.
-
-    These images form a diverse collection of biological images collectively containing tens of thousands of nuclei. The variety within the data set reflects the type of images collected by research biologists at universities, bio-techs, and hospitals. The nuclei in the images are derived from a range of organisms including humans, mice, and flies. In addition, nuclei have been treated and imaged in a variety of conditions including fluorescent and histology stains, several magnifications, and varying quality of illumination. Finally, nuclei appear in different contexts and states including cultured mono-layers, tissues, and embryos, and cell division, genotoxic stress, and differentiation.</p>
+    <p>This image data set contains a large number of segmented nuclei images and was created for the Kaggle 2018 Data Science Bowl sponsored by Booz Allen Hamilton with cash prizes. The image set was a testing ground for the application of novel and cutting edge approaches in computer vision and machine learning to the segmentation of the nuclei belonging to cells from a breadth of biological contexts.
+    </p>
 
     <h3>Images</h3>
-    <p>For each image in an image set, for example "stage1_train", there are two folders: 1) A folder named "images" that contains the image of the nuclei, and 2) a folder named "masks", which contains masks that map to every nuclei in the corresponding image.</p>
-    <p><a href="BBBC038-1.0.0-training.zip"><i class="icon-download-alt"></i> BBBC038-1.0.0-training.zip (113.3 MB)</a></p>
-    <p><a href="BBBC038-1.0.0-test.zip"><i class="icon-download-alt"></i> BBBC038-1.0.0-test.zip (295.9 MB)</a></p>
-
+    <p>These images form a diverse collection of biological images collectively containing tens of thousands of nuclei. The variety within the data set reflects the type of images collected by research biologists at universities, bio-techs, and hospitals. The nuclei in the images are derived from a range of organisms including humans, mice, and flies. In addition, nuclei have been treated and imaged in a variety of conditions including fluorescent and histology stains, several magnifications, and varying quality of illumination. Finally, nuclei appear in different contexts and states including cultured mono-layers, tissues, and embryos, and cell division, genotoxic stress, and differentiation. The dataset is designed to challenge an algorithm's ability to generalize across these variations.</p>
+    <p>Each image is represented by an associated ImageId. Files belonging to an image are contained in a folder with this ImageId. Within this folder are two subfolders: </p>
+      <ul>
+        <li>images contains the image file</li>
+        <li>masks contains the segmented masks of each nucleus. This folder is only included in the training set. Each mask contains one nucleus. Masks are not allowed to overlap (no pixel belongs to two masks). The second stage dataset contains from experimental conditions not present in the first stage. To deter hand labeling, it will also contain images that are ignored in scoring.</li>
+      </ul>
+    <p><a href="stage1_train.zip"><i class="icon-download-alt"></i> stage1_train.zip (82.9 MB)</a></p>
+    <p><a href="stage1_test.zip"><i class="icon-download-alt"></i> stage1_test.zip (9.5 MB)</a></p>
+    <p><a href="stage2_test_final.zip"><i class="icon-download-alt"></i> stage2_test_final.zip (289.7 MB)</a></p>
     <h3>Ground truth {{O}}</h3>
     <p>In addition to the images there is an accompanying collection of annotations. The annotations were originally created by the Broad Imaging Platform. The annotations take the form of a collection of masks for each image of nuclei. Each mask is a PNG file that contains the segmentation of exactly one nuclei in a folder with the same name as the image it refers to. Like the masks, the images of nuclei are also PNG.</p>
     <p>The ground truth and annotations were originally created by the Broad Imaging Platform using a combination of GIMP and a web-based annotation tool created internally. <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/54900">[annotation strategy]</a> <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/48347">[GIMP strategy]</a></p>
-    <p>Some publicly available improved annotations are available in these two github repositories:<br>
-        <a href="https://github.com/ibmua/data-science-bowl-2018-train-set">[Data science bowl 2018 training set improved (Github repo)]</a><br>
-        <a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">[Kaggle Data Science Bowl 2018 dataset fixes (Github repo)]</a>
+    <p><a href="stage1_train_labels.csv"><i class="icon-download-alt"></i> stage1_train_labels.csv (8.1 MB)</a></p>
+    <p><a href="stage1_solution.csv"><i class="icon-download-alt"></i> stage1_solution.csv (1.2 MB)</a></p>
+    <p><a href="stage2_solution_final.csv"><i class="icon-download-alt"></i> stage2_solution_final.csv (1.5 MB)</a></p>
+    <p>These are examples of the submission format:</p>
+    <p><a href="stage1_sample_submission.csv"><i class="icon-download-alt"></i> stage1_sample_submission.csv (5 KB)</a></p>
+    <p><a href="stage2_sample_submission_final.csv"><i class="icon-download-alt"></i> stage2_sample_submission_final.csv (208 KB)</a></p>
+    <p>Some publicly available improved annotations are available in these two github repositories:</p>
+        <p><a href="https://github.com/ibmua/data-science-bowl-2018-train-set">[Data science bowl 2018 training set improved (Github repo)]</a><br>
+        <a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">[Kaggle Data Science Bowl 2018 dataset fixes (Github repo)]</a></p>
     <h3>For more information</h3>
    <p>These images were curated from a variety of sources (below) by the Imaging Platform at the Broad Institute for the 2018 Data Science Bowl. Please contact the <a href="mailto:imagingadmin@broadinstitute.org">Imaging Platform</a> with any inquiries.</p>
    <h4>Contributors</h4>
