--- a/templates/BBBC039.html
+++ b/templates/BBBC039.html
@@ -47,11 +47,11 @@
     <p>Please contact the <a href="mailto:imagingadmin@broadinstitute.org">Imaging Platform</a>.</p>
 
     <h3>Published results using this image set</h3>
-    <p>This dataset has been used for evaluating the performance of Deep Learning models. More details of the evaluation framework in this <a href="https://www.biorxiv.org/node/103064.full">bioRxiv preprint</a>.</p>
+    <p>This dataset has been used for evaluating the performance of Deep Learning models. More details of the evaluation framework in this <a href="https://www.biorxiv.org/node/103064.full">bioRxiv preprint</a> by Caicedo et al. 2018.</p>
 
     <h3>Recommended citation</h3>
-<p>&quot;We used image set <a href="">{{acc}}v1</a>, available from the Broad Bioimage Benchmark Collection
-  [<a href="https://doi.org/10.1101/335216">Caicedo et al., <i>bioRxiv</i>, 2018</a>].&quot;</p>
+    <p>&quot;We used image set <a href="">{{acc}}v1</a> Caicedo et al. 2018, available from the Broad Bioimage Benchmark Collection
+  [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
     <h3>Copyright</h3>
     <p><a href="http://creativecommons.org/publicdomain/zero/1.0/" rel="license"><img alt="CC0" src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;"></a> Copyright: CC0. To the extent possible under law, the various contributors of the imagesets have waived all copyright and related or neighboring rights to <span property="dct:title">{{acc}}v1</span>.</p>
