updated BBBC036 and BBBC037 (resolves #53 and #62)

--- a/templates/BBBC036.html
+++ b/templates/BBBC036.html
@@ -40,15 +40,14 @@
     <h3>Images</h3>
     <p>Images are captured by ImageXpress Micro XLS automated microscope, with 5 fluorescent channels at x20 magnification, in 6 fields of view per well. Each image channel was then stored as a separate, grayscale image file in 16-bit TIF format.</p>
 
-<p><a href="https://idr.openmicroscopy.org/webclient/?show=screen-1751"><i class="icon-download-alt"></i> BBBC036 dataset </a></p>
+<p><a href="http://www.cellimagelibrary.org/pages/project_20269">BBBC036 dataset</a></p>
 
     <h3>Ground truth {{B}}</h3>
 
     <p>1553 compounds in the dataset are annotated with their known MoA(s), which are obtained from the repurposing hub (<a href="https://clue.io/repurposing-app">https://clue.io/repurposing-app</a>) (Corsello et al. 2017).</p>
 
-    <p><a href="BBBC036_v1_DatasetGroundTruth.zip"><i class="icon-download-alt"></i> BBBC036_v1_DatasetGroundTruth.zip (130 KB)</a></p>
+    <p><a href="BBBC036_v1_DatasetGroundTruth.zip"><i class="icon-download-alt"></i> BBBC036_v1_DatasetGroundTruth.csv (132 KB)</a></p>
 
-    <h3>Metadata</h3>
     <p>Description of columns: </p>
     <ul>
         <li>Metadata_broad_sample: Internal Broad ID of the compound</li>
