fix bbbc036 typo in link (resolves #62)

--- a/templates/BBBC036.html
+++ b/templates/BBBC036.html
@@ -46,7 +46,7 @@
 
     <p>1553 compounds in the dataset are annotated with their known MoA(s), which are obtained from the repurposing hub (<a href="https://clue.io/repurposing-app">https://clue.io/repurposing-app</a>) (Corsello et al. 2017).</p>
 
-    <p><a href="BBBC036_v1_DatasetGroundTruth.zip"><i class="icon-download-alt"></i> BBBC036_v1_DatasetGroundTruth.csv (132 KB)</a></p>
+    <p><a href="BBBC036_v1_DatasetGroundTruth.csv">BBBC036_v1_DatasetGroundTruth.csv (132 KB)</a></p>
 
     <p>Description of columns: </p>
     <ul>
