added new dataset BBBC043

--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -212,6 +212,13 @@
     <td class="count">1200</td>
     <td>{{B}}</td>
   </tr>
+  <tr>
+    <td><a href="BBBC043">BBBC043</a></td>
+    <td>{{image_sets.BBBC043}}</td>
+    <td>Fluorescent</td>
+    <td class="count">180</td>
+    <td>{{C}}</td>
+  </tr>
 
       </tbody>
 
