--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -284,27 +284,6 @@
 	  <td class="count">144</td>
 	  <td>{{B}}</td>
 	</tr>
-	<tr>
-	  <td><a href="BBBC021/">BBBC021</a></td>
-	  <td>{{image_sets.BBBC021}}</td>
-	  <td>Fluorescent</td>
-	  <td class="count">13,200</td>
-	  <td>{{B}}</td>
-	</tr>
-    <tr>
-      <td><a href="BBBC036">BBBC036</a></td>
-      <td>{{image_sets.BBBC036}}</td>
-      <td>Fluorescent</td>
-      <td class="count">6</td>
-      <td>{{B}}</td>
-    </tr>
-    <tr>
-      <td><a href="BBBC037">BBBC037</a></td>
-      <td>{{image_sets.BBBC037}}</td>
-      <td>Fluorescent</td>
-      <td class="count">9</td>
-      <td>{{B}}</td>
-    </tr>
     <tr>
       <td><a href="BBBC041">BBBC041</a></td>
       <td>{{image_sets.BBBC041}}</td>
@@ -342,7 +321,47 @@
 	  <td>{{B}}</td>
 	</tr>
       </tbody>
+
+  <thead>
+  <tr>
+    <td colspan="5"><h3>Image-based Profiling</h3></td>
+  </tr>
+	<tr>
+	  <th>Accession</th>
+	  <th>Description</th>
+	  <th><a href="#" rel="tooltip" title="Imaging mode">Mode</a></th>
+	  <th><a href="#" rel="tooltip" title="Fields of view">Fields</a></th>
+	  <th>Ground truth</th>
+	</tr>
+  <tbody>
+  <tr>
+	  <td><a href="BBBC021/">BBBC021</a></td>
+	  <td>{{image_sets.BBBC021}}</td>
+	  <td>Fluorescent</td>
+	  <td class="count">13,200</td>
+	  <td>{{B}}</td>
+	</tr>
+  <tr>
+    <td><a href="BBBC036">BBBC036</a></td>
+    <td>{{image_sets.BBBC036}}</td>
+    <td>Fluorescent</td>
+    <td class="count">6</td>
+    <td>{{B}}</td>
+  </tr>
+  <tr>
+    <td><a href="BBBC037">BBBC037</a></td>
+    <td>{{image_sets.BBBC037}}</td>
+    <td>Fluorescent</td>
+    <td class="count">9</td>
+    <td>{{B}}</td>
+  </tr>
+
+  </thead>
+
+
   </table>
+  <br>
+  <br>
 
 {% endblock content %}
 
