--- a/templates/BBBC038.html
+++ b/templates/BBBC038.html
@@ -42,21 +42,24 @@
     <p>Each image is represented by an associated ImageId. Files belonging to an image are contained in a folder with this ImageId. Within this folder are two subfolders: </p>
       <ul>
         <li>images contains the image file</li>
-        <li>masks contains the segmented masks of each nucleus. This folder is only included in the training set. Each mask contains one nucleus. Masks are not allowed to overlap (no pixel belongs to two masks). The second stage dataset contains from experimental conditions not present in the first stage. To deter hand labeling, it will also contain images that are ignored in scoring.</li>
+        <li>masks contains the segmented masks of each nucleus. This folder is only included in the training set. Each mask contains one nucleus. Masks are not allowed to overlap (no pixel belongs to two masks). The second stage dataset contains from experimental conditions not present in the first stage. To deter hand labeling, it also contains images that are ignored in scoring. See the stage2_solution_final.xls file column containing the word "Ignored".</li>
       </ul>
     <p><a href="stage1_train.zip"><i class="icon-download-alt"></i> stage1_train.zip (82.9 MB)</a></p>
     <p><a href="stage1_test.zip"><i class="icon-download-alt"></i> stage1_test.zip (9.5 MB)</a></p>
     <p><a href="stage2_test_final.zip"><i class="icon-download-alt"></i> stage2_test_final.zip (289.7 MB)</a></p>
     <h3>Ground truth {{O}}</h3>
-    <p>In addition to the images there is an accompanying collection of annotations. The annotations were originally created by the Broad Imaging Platform. The annotations take the form of a collection of masks for each image of nuclei. Each mask is a PNG file that contains the segmentation of exactly one nuclei in a folder with the same name as the image it refers to. Like the masks, the images of nuclei are also PNG.</p>
-    <p>The ground truth and annotations were originally created by the Broad Imaging Platform using a combination of GIMP and a web-based annotation tool created internally. <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/54900">[annotation strategy]</a> <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/48347">[GIMP strategy]</a></p>
+    <p>In addition to the images there is an accompanying collection of annotations. The annotations were originally created by the Broad Imaging Platform. The annotations take the form of a collection of masks for each image of nuclei. Each mask is a PNG file that contains the segmentation of exactly one nucleus in a folder with the same name as the image it refers to. Like the masks, the images of nuclei are also PNG.</p>
+    <p>The ground truth and annotations were originally created by the Broad Imaging Platform using a combination of GIMP and a web-based annotation tool created internally. </p>
+    <li>Annotation tool strategy <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/54900">[link]</a> <a href="Annotation strategies used.pdf">[PDF]</a></li>
+    <li>GIMP strategy <a href="https://www.kaggle.com/c/data-science-bowl-2018/discussion/48347">[link]</a> <a href="GIMP strategy.pdf">[PDF]</a></li>
+    <br/>
     <p><a href="stage1_train_labels.csv"><i class="icon-download-alt"></i> stage1_train_labels.csv (8.1 MB)</a></p>
     <p><a href="stage1_solution.csv"><i class="icon-download-alt"></i> stage1_solution.csv (1.2 MB)</a></p>
     <p><a href="stage2_solution_final.csv"><i class="icon-download-alt"></i> stage2_solution_final.csv (1.5 MB)</a></p>
     <p>These are examples of the submission format:</p>
     <p><a href="stage1_sample_submission.csv"><i class="icon-download-alt"></i> stage1_sample_submission.csv (5 KB)</a></p>
     <p><a href="stage2_sample_submission_final.csv"><i class="icon-download-alt"></i> stage2_sample_submission_final.csv (208 KB)</a></p>
-    <p>Some publicly available improved annotations are available in these two github repositories:</p>
+    <p>Some publicly available improved annotations are available in these two github repositories. We would welcome someone submitting these to BBBC in the same format as a new version:</p>
         <p><a href="https://github.com/ibmua/data-science-bowl-2018-train-set">[Data science bowl 2018 training set improved (Github repo)]</a><br>
         <a href="https://github.com/lopuhin/kaggle-dsbowl-2018-dataset-fixes">[Kaggle Data Science Bowl 2018 dataset fixes (Github repo)]</a></p>
     <h3>For more information</h3>
