--- a/templates/BBBC010.html
+++ b/templates/BBBC010.html
@@ -42,7 +42,7 @@
       Original image size is 696 x 520 pixels.  Images are available in
       16-bit TIF.</p>
 
-    <p><a href="{{acc}}_v1_images.zip"><i class="icon-download-alt"></i> {{acc}}_v1_images.zip (64 MB)</a></p>
+    <p><a href="{{acc}}_v2_images.zip"><i class="icon-download-alt"></i> {{acc}}_v2_images.zip (70 MB)</a></p>
 
     <h3>Ground truth {{B}} {{FB}} {{H}}</h3>
 
@@ -51,8 +51,7 @@
       <tr>
 	<td>{{B}}</td>
 	<td>
-    <p>The 384 images are from a plate of positive and
-	negative controls.  The images are named using this format:
+    <p>The 100 images are from a 384-well plate of positive and negative controls.  The images are named using this format:
 	&lt;plate&gt;_&lt;wellrow&gt;_&lt;wellcolumn&gt;_&lt;wavelength&gt;_&lt;fileid&gt;.tif
 
       Columns 1-12 are positive controls treated with ampicillin.  Columns 13-24 are untreated negative controls.  </p>
@@ -110,7 +109,7 @@
     [<a href="http://dx.doi.org/10.1038/nmeth.2083">Ljosa et al., <i>Nature Methods</i>, 2012</a>].&quot;</p>
 
   <footer class="footer">
-        <p>This page last updated 2018-01-31</p>
+        <p>This page last updated 2019-04-08</p>
   </footer>
 
 {% endblock %}
