add 045 to image sets list

--- a/templates/BBBC045.html
+++ b/templates/BBBC045.html
@@ -30,7 +30,7 @@
     <p><a href="BBBC045_Stained_CP_Features.zip"><i class="icon-download-alt"></i> BBBC045_Stained_CP_Features.zip (170.6 Mb)</a></p>
 
     <h3>For more information</h3>
-    <p>Please contact <a href="mailto:Andrew.Filby@newcastle.ac.uk">Andrew Filby</a> regarding this dataset.</p>
+    <p>Please contact <a href="mailto:Andrew.Filby@newcastle.ac.uk">Andrew Filby</a>, of the Centre for Nanohealth at Swansea University, Swansea, UK regarding this dataset.</p>
 
     <h3>Published results using this image set</h3>
     <p>The proposed data set has been evaluated in a publication that has been submitted: Nassar M. et. al. (2018) Label-free identification of White Blood Cells using Machine Learning. Manuscript submitted for publication.</p>
