--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -219,6 +219,13 @@
     <td class="count">180</td>
     <td>{{C}}</td>
   </tr>
+  <tr>
+    <td><a href="BBBC045">BBBC045</a></td>
+    <td>{{image_sets.BBBC045}}</td>
+    <td>Bright field</td>
+    <td class="count">1</td>
+    <td>{{B}}</td>
+  </tr>
 
       </tbody>
 
