add Horvath dataset to main list and add new GT type (resolves #82)

--- a/templates/benchmarking.html
+++ b/templates/benchmarking.html
@@ -133,4 +133,6 @@
 	and click "Analyze images".  The calculated statistics (Z' factor, V factor,
 	and EC50) will be written to Excel-compatible files.
 	</p>
+  <h3><a name="centroids">{{X}} Centroids</a></h3>
+  <p><i>Description coming soon</i></p>
 {% endblock %}
