--- a/templates/image_sets.html
+++ b/templates/image_sets.html
@@ -291,6 +291,13 @@
 	  <td class="count">144</td>
 	  <td>{{B}}</td>
 	</tr>
+  <tr>
+    <td><a href="BBBC031">BBBC031</a></td>
+    <td>{{image_sets.BBBC031}}</td>
+    <td>Fluorescent</td>
+    <td class="count">216</td>
+    <td>{{C}}{{X}}{{B}}</td>
+  </tr>
     <tr>
       <td><a href="BBBC041">BBBC041</a></td>
       <td>{{image_sets.BBBC041}}</td>
