update language around contributing datasets and publishing script (resolves #87)

--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -10,18 +10,16 @@ We welcome contributions of the following:
   <li>Feedback on the <a href="benchmarking.html">benchmarking methodology</a> or other aspects of the BBBC</li>
 </ul>
 
-The best way to reach us is by email: <a href="mailto:imagingadmin@broadinstitute.org">imagingadmin@broadinstitute.org</a>.
-
-
 <h3>Contributing image sets</h3>
 
-<p>If you are considering contributing an image set and associated
-ground truth to the BBBC, the best first step is to make a draft of
-the description of the image set and its ground truth, using one of the
-existing image sets as a template.  Send us the draft description, as
-well as an example image. Together, we will discuss whether the BBBC
-is the best home for your image set. We will also offer feedback on
-the description and the best formats for providing the images and
-ground truth.</li>
+If you would like to contribute a dataset, please fill out this form: <a href="https://goo.gl/forms/qBdgPcZiEodKDI7E2">https://goo.gl/forms/qBdgPcZiEodKDI7E2</a>.
+Once you have submitted the form, please email <a href="mailto:imagingadmin@broadinstitute.org">imagingadmin@broadinstitute.org</a> with the following:
+<ul>
+  <li>a zip file of your images</li>
+  <li>1-5 example images</li>
+  <li>any metadata or ground truth data you may have (.csv files).</li>
+</ul>
+
+Please email <a href="mailto:imagingadmin@broadinstitute.org">imagingadmin@broadinstitute.org</a> if you have any questions about contributing datasets.
 
 {% endblock %}
